// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radiobutton renders 1`] = `
<div
  className="flex flex-col gap-2"
>
  <p>
    Please select your age:
  </p>
  <label
    className="sc-yGKTs gtKvvj"
    htmlFor="age1"
  >
    <input
      aria-label="0 - 30"
      className="sc-dbbhXq fsOTUY"
      id="age1"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-dXycDr dhgzGn"
    >
      <div
        className="sc-jFAcUc ilVYDH"
      />
    </span>
    <span
      className="sc-bvdFzt bDQaZp"
    >
      0 - 30
    </span>
  </label>
  <label
    className="sc-yGKTs gtKvvj"
    htmlFor="age2"
  >
    <input
      aria-label="31 - 60"
      className="sc-dbbhXq fsOTUY"
      id="age2"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-dXycDr dhgzGn"
    >
      <div
        className="sc-jFAcUc ilVYDH"
      />
    </span>
    <span
      className="sc-bvdFzt bDQaZp"
    >
      31 - 60
    </span>
  </label>
  <label
    className="sc-yGKTs gtKvvj"
    htmlFor="age3"
  >
    <input
      aria-label="61 - 100"
      className="sc-dbbhXq fsOTUY"
      id="age3"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-dXycDr dhgzGn"
    >
      <div
        className="sc-jFAcUc ilVYDH"
      />
    </span>
    <span
      className="sc-bvdFzt bDQaZp"
    >
      61 - 100
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders Checked 1`] = `
<label
  className="sc-yGKTs gtKvvj"
>
  <input
    checked={true}
    className="sc-dbbhXq fsOTUY"
    onClick={[Function]}
    readOnly={true}
    type="radio"
  />
  <span
    className="sc-dXycDr dhgzGn"
  >
    <div
      className="sc-jFAcUc ilVYDH"
    />
  </span>
  <span
    className="sc-bvdFzt bDQaZp"
  >
    Checked radio button
  </span>
</label>
`;

exports[`Radiobutton renders Disabled 1`] = `
<label
  className="sc-yGKTs gtKvvj"
>
  <input
    className="sc-dbbhXq fsOTUY"
    disabled={true}
    onClick={[Function]}
    type="radio"
  />
  <span
    className="sc-dXycDr dhgzGn"
  >
    <div
      className="sc-jFAcUc ilVYDH"
    />
  </span>
  <span
    className="sc-bvdFzt bDQaZp"
  >
    Disabled radio button
  </span>
</label>
`;

exports[`Radiobutton renders No label 1`] = `
<div
  dir="rtl"
>
  <label
    className="sc-yGKTs gtKvvj"
    htmlFor="button1"
  >
    <input
      className="sc-dbbhXq fsOTUY"
      id="button1"
      name="button"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-dXycDr dhgzGn"
    >
      <div
        className="sc-jFAcUc ilVYDH"
      />
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col gap-2"
  >
    <p>
      Please select your age:
    </p>
    <label
      className="sc-yGKTs gtKvvj"
      htmlFor="age1"
    >
      <input
        aria-label="0 - 30"
        className="sc-dbbhXq fsOTUY"
        id="age1"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-dXycDr dhgzGn"
      >
        <div
          className="sc-jFAcUc ilVYDH"
        />
      </span>
      <span
        className="sc-bvdFzt bDQaZp"
      >
        0 - 30
      </span>
    </label>
    <label
      className="sc-yGKTs gtKvvj"
      htmlFor="age2"
    >
      <input
        aria-label="31 - 60"
        className="sc-dbbhXq fsOTUY"
        id="age2"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-dXycDr dhgzGn"
      >
        <div
          className="sc-jFAcUc ilVYDH"
        />
      </span>
      <span
        className="sc-bvdFzt bDQaZp"
      >
        31 - 60
      </span>
    </label>
    <label
      className="sc-yGKTs gtKvvj"
      htmlFor="age3"
    >
      <input
        aria-label="61 - 100"
        className="sc-dbbhXq fsOTUY"
        id="age3"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-dXycDr dhgzGn"
      >
        <div
          className="sc-jFAcUc ilVYDH"
        />
      </span>
      <span
        className="sc-bvdFzt bDQaZp"
      >
        61 - 100
      </span>
    </label>
  </div>
</div>
`;
